--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <nav>
       <div class="nav-center">
         <h4>color flipper</h4>
+        <h3>replace</h3>
         <ul class="nav-links">
           <li><a href="index.html">simple</a></li>
           <li><a href="hex.html">hex</a></li>
